# mybotV1-DRL-BASED

./: .gitignore  CLAUDE.md  README.md  SELF_BALANCE_GUIDE.md  frames_2025-03-19_01.28.55.gv  frames_2025-03-19_01.37.33.gv  requirements.txt  ros2_rl_env.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/urdf_and_meshes_of_the_robot/lib/urdf_and_meshes_of_the_robot/: robot_nodes_control  robot_nodes_control.py  train_rl_ppo.py
install/urdf_and_meshes_of_the_robot/share/ament_index/resource_index/package_run_dependencies/: urdf_and_meshes_of_the_robot
install/urdf_and_meshes_of_the_robot/share/ament_index/resource_index/parent_prefix_path/: urdf_and_meshes_of_the_robot
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/cmake/: urdf_and_meshes_of_the_robotConfig-version.cmake  urdf_and_meshes_of_the_robotConfig.cmake
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/config/: joint_names_URDF_AND_MESHES_OF_THE_ROBOT.yaml  urdf.rviz
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/environment/: ament_prefix_path.dsv  path.dsv
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/meshes/: BODY_link.STL  IMU_link.STL  Left_wheel.STL  Lower_left_leg.STL  Lower_right_link.STL  Right_wheel.STL  Upper_left_leg.STL  Upper_right_link.STL  camera_link.STL  lidar_link.STL
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/urdf/: old_urdf_and_meshes_of_the_robot.urdf.xacro  urdf_and_meshes_of_the_robot.csv  urdf_and_meshes_of_the_robot.urdf  urdf_and_meshes_of_the_robot.urdf.xacro
install/urdf_and_meshes_of_the_robot/share/urdf_and_meshes_of_the_robot/worlds/: empty.world
log/: latest_build
resource/: urdf_and_meshes_of_the_robot
src/urdf_and_meshes_of_the_robot/: CMakeLists.txt  env.py  package.xml  setup.py
src/urdf_and_meshes_of_the_robot/config/: controllers.yaml  gazebo_params.yaml  joint_names_URDF_AND_MESHES_OF_THE_ROBOT.yaml
src/urdf_and_meshes_of_the_robot/launch/: balance.launch.py  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  rl_environment.launch.py
src/urdf_and_meshes_of_the_robot/meshes/: BODY_link.STL  IMU_link.STL  Lower_left_leg.STL  Lower_right_link.STL  Upper_left_leg.STL  Upper_right_link.STL  camera_link.STL  hip_actuator.STL  lidar_link.STL
src/urdf_and_meshes_of_the_robot/mujoco/: mybot.urdf  mybot.xml  mybot_mj.urdf
src/urdf_and_meshes_of_the_robot/scripts/: __init__.py  balance_env.py  balance_env_mujoco.py  camera_recorder.py  duck_eval.py  env.py  metrics_logger.py  mjx_bench.py  mjx_check.py  mjx_env.py  mjx_nav_env.py  mjx_pkl_fix.py  mjx_ppo.py  mjx_render.py  mujoco_play.py  mujoco_record.py  mujoco_view.py  nav_env_mujoco.py  nav_eval.py  periodic_recorder.py  plot_metrics.py  ppo_balance.py  ppo_parallel.py  record_episode.py  robot_nodes_control.py  robot_test.py  run.sh  s34_smoke.py  s3_diag.py  s3_diag2.py  tb_plot_writer.py  terrain.py  train_curriculum.sh  train_rl_ppo.py  vec_env.py  yaw_compare.py
src/urdf_and_meshes_of_the_robot/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/urdf_and_meshes_of_the_robot/scripts/log/: latest_build
src/urdf_and_meshes_of_the_robot/urdf/: mybot_balance.urdf.xacro  mybot_geometry.urdf.xacro  old_urdf_and_meshes_of_the_robot.urdf.xacro  urdf_and_meshes_of_the_robot.csv  urdf_and_meshes_of_the_robot.urdf
src/urdf_and_meshes_of_the_robot/worlds/: balance.world  empty.world  world1.world
