<package format="2">
  <name>urdf_and_meshes_of_the_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf_and_meshes_of_the_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf_and_meshes_of_the_robot robot</p>
  </description>
  <author>Mickyas Tamiru Asfaw</author>
  <maintainer email="mickyastamiru92@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>ament_python</build_depend>
  
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>

  <depend>python3-numpy</depend>
  <depend>python3-gym</depend>
  
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/urdf_and_meshes_of_the_robot/meshes" />
  </export>
</package>