<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>urdf_and_meshes_of_the_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdf_and_meshes_of_the_robot</p>
    <p>This package contains configuration data, 3D models and launch files
for urdf_and_meshes_of_the_robot robot</p>
  </description>
  <author>Mickyas Tamiru Asfaw</author>
  <maintainer email="mickyastamiru92@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>ament_cmake_python</build_depend> -->
  <!-- <build_depend>ament_python</build_depend> -->
  
  <depend>rclpy</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>

  <!-- ros2_control stack for the self-balance milestone -->
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>

  <depend>python3-numpy</depend>
  <!-- periodic_recorder.py records real Gazebo footage via a spawned camera -->
  <depend>cv_bridge</depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
  </export>
</package>